# mcpdc

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/confluence_mcp/: __init__.py  __main__.py  app.py  client.py  config.py  converters.py  errors.py  mcp_server.py  session.py
src/confluence_mcp/tools/: __init__.py  attachments.py  comments.py  pages.py  search.py
tests/: conftest.py  test_app.py  test_auth.py  test_client.py  test_handlers.py  test_sse_roundtrip.py  test_tools.py
