[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confluence-mcp"
version = "0.1.0"
description = "MCP server for Atlassian Confluence Server 7.4.6"
authors = [{name = "Artem Sitnikov", email = "artem.sitnikoff@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (need live Confluence)"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "S", "C4", "PIE", "PT", "RET", "SIM"]
ignore = ["E501", "S101"]  # Line length handled by formatter, allow asserts in tests